<resources xmlns:tools="http://schemas.android.com/tools"
    tools:locale="pt_BR">
    <string name="app_name" translatable="false">Instracker</string>
    <string name="integer_format" translatable="false">%1$d</string>
    <string name="onboarding_welcome">Boas vindas ao Instracker</string>
    <string name="onboarding_welcome_desc">Fique por dentro de todas as informações relevantes na maior rede social do mundo!</string>
    <string name="onboarding_login">Começar</string>
    <string name="login_lets_start">Entre utilizando sua conta</string>
    <string name="login_hot_text">Sua senha não será compartilhada, os dados de login ficam salvos apenas no seu aparelho</string>
    <string name="instagram_username_hint">Digite o nome de usuário</string>
    <string name="instagram_username_label">Usuário</string>
    <string name="instagram_password_hint">Digite a sua senha</string>
    <string name="instagram_password_label">Senha</string>
    <string name="do_login_action">Visualizar informações!</string>
    <string name="login_username_too_short">Nome de usuário muito pequeno</string>
    <string name="login_password_too_short">Senha muito curta</string>
    <string name="invalid_user">O nome de usuário inserido não parece pertencer a uma conta</string>
    <string name="bad_password">A senha que você inseriu está incorreta</string>
    <string name="challenge_required">Confirmação do Login</string>
    <string name="network_error">Erro de conexão</string>
    <string name="instagram_connected_as">Conectado como %1$s</string>
    <string name="home_label_followers">Seguidores</string>
    <string name="home_label_following">Seguindo</string>
    <string name="home_element_new_followers">Novos seguidores</string>
    <string name="home_element_unfollow">Deixaram de seguir</string>
    <string name="home_element_story_watch">Visualizações de stories</string>
    <string name="home_element_profile_interaction">Interações com seu perfil</string>
    <string name="home_element_not_follow_you_back">Não te seguem de volta</string>
    <string name="home_element_you_dont_follow_back">Você não segue de volta</string>
    <string name="home_carousel_videos_posted">vídeos postados</string>
    <string name="home_carousel_images_posted">imagens enviadas</string>
    <string name="home_carousel_comments_count">comentários recebidos</string>
    <string name="home_carousel_likes_count">curtir recebidos</string>
    <string name="home_carousel_follower_count">seguidores</string>
    <string name="home_carousel_following_count">seguindo</string>
    <string name="home_carousel_post_count">postagens</string>
    <string name="home_carousel_likes_mean">média de curtidas</string>
    <string name="home_carousel_comments_mean">média de comentarios</string>
    <string name="stories_seen_by">Visto por %1$d</string>
    <string name="challenge_title">Aprove o login neste dispositivo</string>
    <string name="challenge_description">Enviaremos um código de segurança para confirmar sua identificação. Como você deseja receber seu código?</string>
    <string name="challenge_send">Enviar código de segurança</string>
    <string name="challenge_code_desc">Digite o código de 6 dígitos que foi enviado para o %1$s</string>
    <string name="challenge_code_title">Entre com seu código de segurança</string>
    <string name="user_follows_you">Segue você</string>
    <string name="user_you_follow">Você segue</string>
    <string name="listing_generic_title">Usuários</string>
    <string name="listing_recent_followers">Seguidores recentes</string>
    <string name="listing_recent_unfollowers">Desseguiram recentemente</string>
    <string name="listing_interact_profile">Interagiram com você</string>
    <string name="listing_unrequited_followers">Não te seguem de volta</string>
    <string name="listing_stories_view">Visualizaram stories</string>
    <string name="listing_fans">Admiradores</string>
    <string name="drawer_profile_interaction">Viram seu perfil</string>
    <string name="open_drawer">Abrir opções</string>
    <string name="close_drawer">Fechar opções</string>
    <string name="account_logout">Sair</string>
    <string name="drawer_stories_insight">Análise dos stories</string>
    <string name="drawer_media_insight">Engajamento</string>
    <string name="drawer_app_settings">Configurações</string>
    <string name="app_name_start">Ins</string>
    <string name="app_name_end">Tracker</string>
    <string name="active_stories">Stories Ativos</string>
    <string name="tracked_stories">Stories Monitorados</string>
    <string name="story_insights">Análise dos stories</string>
    <string name="story_audience">Audiência dos stories</string>
    <string name="story_most_spectators">Maiores espectadores</string>
    <string name="story_least_spectators">Menores espectadores</string>
    <string name="story_not_follow_spectators">Espectadores que não me seguem</string>
    <string name="story_not_follow_spectators_title">Não me seguem</string>
    <string name="story_analysis_insight">Story Insights</string>
    <string name="story_most_watched">Stories mais visualizados</string>
    <string name="story_least_watched">Stories menos visualizados</string>
    <string name="story_insight_most_watched">Mais visualizados</string>
    <string name="story_insight_recent">Recentes</string>
    <string name="story_insight_not_follower">Não me seguem</string>
    <string name="story_insight_not_following">Eu não sigo</string>
    <string name="story_insight_following">Me seguindo</string>
    <string name="story_most_watched_title">Mais visualizados</string>
    <string name="story_least_watched_title">Menos visualizados</string>
    <string name="drawer_statistics">Estatísticas</string>
    <string name="feed_insights">Engagamento</string>
    <string name="best_followers">Meus melhores seguidores</string>
    <string name="most_like_me">Os que mais curtem</string>
    <string name="most_comment_me">Os que mais comentam</string>
    <string name="ghost_followers">Seguidores Fantasmas</string>
    <string name="least_like_me">Os que menos curtem</string>
    <string name="least_comment_me">Os que menos comentam</string>
    <string name="never_like_never_comment_me">Nunca curtiram nem comentaram</string>
    <string name="never_like_never_comment_me_title">Não curtem nem comentam</string>
    <string name="titled_feed_insights">Feed Insights</string>
    <string name="most_liked_medias">Posts mais curtidos</string>
    <string name="most_commented_medias">Posts mais comentados</string>
    <string name="never_interacted">Nunca interagiram</string>
    <string name="discovery_not_follow_but_like">Não me segue, mas curte</string>
    <string name="discovery_not_follow_but_comment">Não me segue, mas comenta</string>
    <string name="general_statistics">Estatísticas Gerais</string>
    <string name="no_chart_data">Não há dados</string>
    <string name="instracker_price_format">%1$s/mês</string>
    <plurals name="search_insight_profiles_format">
        <item quantity="one">%1$d perfil</item>
        <item quantity="other">%1$d perfis</item>
    </plurals>
    <plurals name="insight_stories_watched">
        <item quantity="one">Visualizou %1$d story</item>
        <item quantity="other">Visualizou %1$d stories</item>
    </plurals>
    <plurals name="likes_count">
        <item quantity="one">%1$d curtida</item>
        <item quantity="other">%1$d curtidas</item>
    </plurals>
    <plurals name="comment_count">
        <item quantity="one">%1$d comentário</item>
        <item quantity="other">%1$d comentários</item>
    </plurals>
</resources>