<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@drawable/instagram_background">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:clipToPadding="false"
            android:padding="24dp"
            app:paddingTopSystemWindowInsets="@{true}"
            app:paddingStartSystemWindowInsets="@{true}"
            app:paddingEndSystemWindowInsets="@{true}"
            app:paddingBottomSystemWindowInsets="@{true}">

            <Space
                android:id="@+id/space_top"
                android:layout_weight="0.7"
                android:layout_width="wrap_content"
                android:layout_height="0dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:importantForAccessibility="no"
                android:src="@mipmap/onboarding_image"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/login_lets_start"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textAlignment="gravity"
                android:gravity="center"
                tools:ignore="UnusedAttribute"
                android:textFontWeight="600"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/instagram_username_label"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textFontWeight="500"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                style="@style/Widget.Instrack.TextInputLayout.Login">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textCursorDrawable="@null"
                    android:textFontWeight="600"
                    android:textSize="14sp"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1"
                    android:hint="@string/instagram_username_hint"
                    android:textColorHint="#B1FFFFFF"
                    tools:ignore="UnusedAttribute"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/instagram_password_label"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textFontWeight="500"
                tools:ignore="UnusedAttribute"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                style="@style/Widget.Instrack.TextInputLayout.Login"
                app:endIconMode="password_toggle">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textCursorDrawable="@null"
                    android:textFontWeight="600"
                    android:textSize="14sp"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:hint="@string/instagram_password_hint"
                    android:textColorHint="#B1FFFFFF"
                    tools:ignore="UnusedAttribute"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_profile"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/do_login_action"
                style="@style/Widget.Instrack.MaterialButton.Login"/>

            <Space
                android:id="@+id/space_bottom"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_hot_text"
                android:textColor="@android:color/white"
                android:textAlignment="gravity"
                android:gravity="center"
                android:textSize="12sp"
                android:textFontWeight="100"
                tools:ignore="UnusedAttribute"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>